--- a/signup.css
+++ b/signup.css
@@ -10,7 +10,7 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-image: url(../picturesWebsite/background5.jpg);
+    background-image: url(background4.jpg);
     background-position: 100%;
     background-size: cover;
     background-repeat: no-repeat;
